maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:23: error: method keepHandOnSideWall has return statement; needs result type
  return s
  ^