maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
  var dir:Direction = getDirection()
  var sommeAngle:Int = 0
  while (!estSurBiscuit()) {
    while (isDirectionFree(dir) && sommeAngle == 0) {
      avance()
    }
    sommeAngle = keepHandOnSideWall(sommeAngle)
  }
  prendBiscuit()
}

def keepHandOnSideWall(sommeAngle:Int) = {
	var s:Int = sommeAngle
  while (estFaceMur()) {
    droite()
    s -= 1
  }
	avance()
	gauche()
  s += 1
  return s
}

def isDirectionFree(dir:Direction):Boolean = {
  var dirActu = getDirection()
  setDirection(dir)
  if (estFaceMur()) {
    setDirection(dirActu)
    return false
  } else {
    setDirection(dirActu)
    return true
  }
}